# aeonmi

./: .gitignore  ACHIEVEMENTS_AND_ROADMAP.md  AEONMI_LANGUAGE_ROADMAP.md  ARC_QUANTUM_ANALYSIS.md  ARC_SOLVER_CAPABILITY.md  Aeonmi.toml  Aeonmi_Glyph_Identity_Spec_and_Manual.odg  BLOCKERS_AND_LANGUAGE_GAPS.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  CLI_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  DEPLOY_NOW.txt  FINAL_ARCHITECTURE_RECOMMENDATION.md  FINAL_DEPLOYMENT_CHECKLIST.md  FULL_MATURITY_REVIEW.md  FULL_ROADMAP.md  HONEST_CAPABILITIES.md  IMPLEMENTATION_COMPLETE.md  LANGUAGE_MASTERY_SUMMARY.md  LAUNCH_CHECKLIST.md  MGKS_ACTION_PLAN.md  MGKS_IMPLEMENTATION_SCHEMA.md  MOTHER_AI_ARCHITECTURE.md  MOTHER_AI_STATUS.md  NETLIFY_DEPLOY_GUIDE.md  NEW_SESSION_PROMPT.md  PROJECT_TRANSLATION_MAP.md  Q.U.B.E.md  QUANTUM_GAPS_ANALYSIS.md  QUANTUM_ROADMAP_2.0.md  QUANTUM_SHOWCASE.txt  README.md  README_COMPLETE.md  READY_TO_DEPLOY.md  (+130 more)
.cargo/: config.toml
.github/workflows/: branch-protection.yml  ci.yml  rust-clippy.yml
Aeonmi_Master/: .~lock.Aeonmi_Operations_Manual.docx#  .~lock.MOTHER_PLAN_v2.docx#  AEONMI_GUIDE.md  AEONMI_PRESENTATION_DECK.md  AEONMI_ROADMAP.md  AEONMI_ROADMAP_v2.md  Aeonmi_Operations_Manual.docx  Aeonmi_Roadmap.docx  FINALIZATION_SUMMARY.md  MASTER_DEMO_PLAN.md  MGKS_WhitePaper_v1.md  MOTHER_BRIEF.md  MOTHER_PLAN.docx  MOTHER_PLAN_v2.docx  MOTHER_RELATIONSHIP_GUIDE - Copy.md  README.md  SYSTEM_AUDIT_2026.md  aeonmi_launcher.py  aeonmi_shard_crystal.html  build_textbook_pdf.py  business_plan.ai  dashboard.py  deploy_website.bat  file_explorer.py  fp_runner_v3.py  genesis.json  genesis_sync.py  knowledge_store.py  language_roadmap.ai  launch_nexus.bat  list_shard.py  mother_journal.txt  nexus_relay.py  nexus_standalone.py  one_test_out.txt  qiskit_runner.py  run_pipeline.bat  screen_recorder.py  test_results.txt  textbook_appendices.txt  (+2 more)
Aeonmi_Master/aeonmi_ai/: AEONMI_MASTER_PROMPT.md  dream.ai  error_memory.ai  host_builtins_test.ai  op_probe.ai  quantum_decision.ai  shard_boot.ai
Aeonmi_Master/knowledge/: index.json
BellTest/: Aeonmi.toml  README.md
BellTest/output/: log.txt
Demo/: Aeonmi.toml  README.md
DiagTest/: Aeonmi.toml  README.md
DodTest/: Aeonmi.toml  README.md
MinimalQasm/: Aeonmi.toml  README.md
QasmTest/: Aeonmi.toml  README.md  validate_qasm.py
StepDDemo/: Aeonmi.toml  README.md
TimeoutTest/: Aeonmi.toml  README.md
aeonmi_ai/: file_explorer.py  file_upload.py  mother_memory_phases.py
deployment/: build_website.ai  deploy_checklist.ai  verify_starter_kit.ai
docs/: ADVANCED_FEATURES_COMPLETE.md  AEONMI_UNIQUE_SYNTAX.md  Aeonmi_Language_Guide.md  Architecture-by-Language.md  ENTERPRISE_AUDIT.md  IMPLEMENTATION_COMPLETE.md  INVESTOR_TECHNICAL_AUDIT.md  LANGUAGE_SPEC_CURRENT.md  Language-Composition.md  MGKS_USER_GUIDE.md  QUBE_SPEC.md  README.md  Shard_README.md  TUTORIAL.md  Technology-Stack.md  WEB3_GUIDE.md  architecture.md  glyph_algebra.md  grammar_qube.md  language_spec.md
examples/: aeonmi_hybrid_showcase.ai  agent_hive_demo.ai  arc_simple.ai  arc_solver.ai  arc_solver_001.ai  arc_solver_001_full.ai  array_methods_test.ai  ascii_minimal.ai  ascii_quantum_test.ai  ascii_two_states.ai  bell.qube  circuit_test.ai  closures.ai  code_review.ai  complete_feature_demo.ai  comprehensive_quantum_test.ai  demo.qube  error_memory_demo.rs  genesis.ai  greek_test.ai  grover_database_search.ai  grover_search.ai  hardware_integration_demo.ai  hello.ai  mgks_integration.rs  minimal_unicode.ai  phase1_test.ai  phase4_demo.ai  quantum.ai  quantum_ai_fusion.ai  quantum_algorithms_demo.ai  quantum_applications.aeonmi  quantum_consciousness.ai  quantum_cryptography_app.aeonmi  quantum_demo.rs  quantum_entanglement_network.ai  quantum_expedition.ai  quantum_ml.ai  quantum_ml_app.aeonmi  quantum_native_syntax.ai  (+19 more)
gui/: quantum_ide.html
mother-improvement-proposal/: founder_review_notes.md  improvement_plan.md  mgks_integration_plan.md  new_modules.md  risks.md  self_assessment.md
mother_ai/: demo.ai  main.ai  main.rs
output/: log.txt
projects/: StepH_Demo
scripts/: build.sh  check.sh  test.sh
selfhost_docs/: SELFHOST_BOUNDARY.md  ai_test_baseline.md  dependency_map.md  host_interface.md  port_decisions.md  progress.json
shard/: shard.ai
src/: banner.rs  cli.rs  cli_enhanced.rs  cli_integration.rs  cli_vault.rs  config.rs  engine.ai  integration.rs  lib.rs  logic.ai  main.ai  main.rs  quantum_ast_tests.rs  vault.rs
starter_kit/: hello_quantum.ai  qft_pattern.ai  run.bat
temp_starter_kit/: grover_search.ai  qft_pattern.ai
test_sandbox.aeon/: .gitignore  Aeonmi.toml  README.md
tests/: ai_review.rs  arithmetic.ai  arrays.rs  assign_and_calls.rs  builtins_len.rs  bytecode_associative_fold.rs  bytecode_basic.rs  bytecode_const_folding.rs  bytecode_disasm.rs  bytecode_for.rs  bytecode_function.rs  bytecode_if.rs  bytecode_logical.rs  bytecode_max_frames.rs  bytecode_opt_stats.rs  bytecode_overflow.rs  bytecode_quantum.rs  bytecode_recursion.rs  bytecode_while.rs  cli_check_semantic.rs  cli_opt_stats_json.rs  cli_project_main.rs  cli_smoke.rs  code_actions_new.rs  compiler_pipeline.rs  complete_syntax.ai  deep_propagation.rs  diagnostics.rs  errors_extra.rs  exec_cleanup.rs  exec_smoke.rs  exec_watch.rs  format_snapshots.rs  functions.rs  grammar_structures.rs  key_rotate.rs  legacy_flags.rs  metrics_bench.rs  metrics_function.rs  metrics_history_reload.rs  (+36 more)
titan_libraries/: titan.ai
translated/: build.ai  cli.ai  cli_vault.ai  config.ai  encryption.ai  gui_bridge.ai  integration.ai  lib.ai  main.ai  quantum_ast_tests.ai  vault.ai
uploads/: MGKS_WhitePaper_v1 (1).docx  aeonmi_arc_test_001.json
vscode-aeonmi/: README.md  language-configuration.json  package.json
website upgdates & starter kits/: DEPLOYMENT_READY.txt  MANIFEST.txt
wiki/: Architecture.md  CLI Reference.md  CLI-Reference.md  Development-Guide.md  Getting Started.md  Getting-Started.md  Home.md  Known Limitations and Roadmap.md  Language and VM.md  Mother-AI-and-Dashboard.md  QUBE.md  _Sidebar.md
(+899 files in other folders)
