[package]
name = "aeonmi_project"
version = "1.0.0-quantum-consciousness"
edition = "2021"
license-file = "LICENSE"
publish = false
autobins = false
default-run = "aeonmi_shard"
description = "AEONMI Quantum Computing Ecosystem with AI Consciousness"
authors = ["AEONMI Team"]
resolver = "2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aeonmi_shard"
path = "src/main.rs"

[[bin]]
name = "aeon"
path = "src/bin/aeon.rs"

[[bin]]
name = "MotherAI"
path = "mother_ai/main.rs"
required-features = ["mother-ai"]

[[bin]]
name = "aeonmi_project"
path = "src/bin/aeonmi_project.rs"

[[bin]]
name = "aeonmi"
path = "src/bin/aeonmi.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Make warnings loud in CI but easy to relax locally if needed.
[lints.rust]
unused = "warn"
warnings = "warn"

[lints.clippy]
# Turn on broad checks without going full pedantic.
all = "warn"
cargo = "warn"
float_cmp = "warn"
len_zero = "warn"
module_inception = "warn"
# You can relax noisy ones:
needless_pass_by_value = "allow"
too_many_arguments = "allow"

[features]
default = ["minimal", "bytecode"]
full-suite = ["quantum", "mother-ai", "titan-libraries", "holographic", "voice"]
quantum = ["nalgebra"]
mother-ai = []
titan-libraries = ["quantum"]
holographic = ["three-d", "wgpu", "winit"]
voice = ["rodio"]
quantum-vault = ["ring", "rustls"]
qiskit = ["quantum", "pyo3", "numpy"]
ai-openai = ["reqwest"]
ai-copilot = ["reqwest"]
ai-perplexity = ["reqwest"]
ai-deepseek = ["reqwest"]
"kdf-argon2" = ["argon2"]
debug-metrics = []
bytecode = []
bytecode_vm = []
minimal = []

[dependencies]
anyhow = "1"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
unicode-ident = "1.0"
unicode-normalization = "0.1"
zeroize = "1"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

dirs-next = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
num_cpus = "1.16"
seahash = "4.1"

ctrlc = "3.4"
notify = "6.1"
walkdir = "2.5"
fs_extra = "1.3"

crossterm = "0.27"
ratatui = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
dunce = "1"

rodio = { version = "0.17", optional = true }
three-d = { version = "0.16", optional = true }
wgpu = { version = "0.17", optional = true }
winit = { version = "0.28", optional = true }

rand = "0.8"
rand_distr = "0.4"

nalgebra = { version = "0.33", optional = true }
num-complex = "0.4"

pyo3 = { version = "0.21", optional = true, features = ["auto-initialize"] }
numpy = { version = "0.21", optional = true }

ring = { version = "0.16", optional = true }
rustls = { version = "0.21", optional = true }

reqwest = { version = "0.12", features = ["blocking","json"], optional = true }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
hyper = "1.0"
serde_json = "1.0"
whoami = "1.5"
sha2 = "0.10"
base64 = "0.22"
chacha20 = "0.9"
cipher = "0.4"
argon2 = { version = "0.5", optional = true }
once_cell = "1.19"
async-trait = "0.1"
sha1 = "0.10"
aes-gcm = { version = "0.10", features = ["aes"] }
pqcrypto-kyber = "0.7"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"

tempfile = "3.10"

[dev-dependencies]
tempfile = "3.10"
insta = { version = "1.39", features = ["glob"] }
serial_test = "3"
ntest = "0.9"

# --- Windows-only ---
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_System_Threading", "Win32_Foundation"] }

# --- Unix-only ---
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
