[package]
name = "aeonmi_project"
version = "1.0.0-quantum-consciousness"
edition = "2021"
license-file = "LICENSE"
publish = false
autobins = false
default-run = "Aeonmi"
description = "AEONMI Quantum Computing Ecosystem with AI Consciousness"
authors = ["AEONMI Team"]

[lib]
path = "src/lib.rs"

# Main unified executable with all components
[[bin]]
name = "Aeonmi"
path = "src/main.rs"

# Mother AI standalone executable
[[bin]]
name = "MotherAI"
path = "mother_ai/main.rs"

# Legacy binary name for tests (expects CARGO_BIN_EXE_aeonmi_project)
[[bin]]
name = "aeonmi_project"
path = "src/bin/aeonmi_project.rs"

# Lowercase CLI alias so integration tests can resolve CARGO_BIN_EXE_aeonmi
[[bin]]
name = "aeonmi"
path = "src/bin/aeonmi.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
# Unified AEONMI ecosystem features
default = ["full-suite"]
full-suite = ["quantum", "mother-ai", "titan-libraries", "holographic", "voice"]
quantum = ["nalgebra", "num-complex"]
mother-ai = ["tokio", "reqwest"]
titan-libraries = ["quantum"]
holographic = ["three-d", "wgpu", "winit"]
voice = ["rodio"]
quantum-vault = ["ring", "rustls"]
qiskit = ["quantum", "pyo3", "numpy"]
ai-openai = ["reqwest"]
ai-copilot = ["reqwest"]
ai-perplexity = ["reqwest"]
ai-deepseek = ["reqwest"]
ai-openrouter = ["reqwest"]
ai-claude = ["reqwest"]
debug-metrics = []
bytecode = []
minimal = []
kdf-argon2 = []

[dependencies]
# Core
anyhow = "1"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
unicode-ident = "1.0"
unicode-normalization = "0.1"
zeroize = "1"
uuid = { version = "1.0", features = ["v4"] }

# Config / paths
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Editor niceties
ctrlc = "3.4"

# File watching
notify = "6.1"

# Helpers for recursive copy
fs_extra = "1.3"

# TUI / terminal
crossterm = "0.27"
ratatui = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Mother AI dependencies
tokio = { version = "1.0", features = ["full"], optional = true }
dashmap = "5.5"
parking_lot = "0.12"

# Voice and holographic interface (feature-gated)
rodio = { version = "0.17", optional = true }
three-d = { version = "0.16", optional = true }
wgpu = { version = "0.17", optional = true }
winit = { version = "0.28", optional = true }

# Titan math & RNG
rand = "0.8"
rand_distr = "0.4"

# Quantum math backend (feature-gated)
nalgebra = { version = "0.33", optional = true }
num-complex = { version = "0.4", optional = true }

# Qiskit bridge (feature-gated)
pyo3 = { version = "0.21", optional = true, features = ["auto-initialize"] }
numpy = { version = "0.21", optional = true }

# Quantum Vault security dependencies (feature-gated)
ring = { version = "0.16", optional = true }
rustls = { version = "0.21", optional = true }

# HTTP (AI providers)
reqwest = { version = "0.12", features = ["blocking","json"], optional = true }
serde_json = "1.0"
whoami = "1.5"
sha2 = "0.10"
base64 = "0.22"
chacha20 = "0.9"
cipher = "0.4"
argon2 = "0.5"
hkdf = "0.12"
chacha20poly1305 = "0.10"
once_cell = "1.19"
async-trait = "0.1"
sha1 = "0.10"
aes-gcm = { version = "0.10", features = ["aes"] }
hex = "0.4"
rpassword = "7"
pqcrypto-kyber = "0.7"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"

# For atomic file operations
tempfile = "3.10"

[dev-dependencies]
tempfile = "3.10"
insta = { version = "1.39", features = ["glob"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"